--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import 'nav.css';
 @import 'katalog.css';
 @import 'media.css';
+@import 'exempel.css';
 
 * {
     margin: 0;
@@ -87,7 +88,7 @@ article h2 {
 }
 
 .banner-rubrik {
-      font-size: 6rem;
+      font-size: 5rem;
       font-family: 'Roboto', sans-serif;
 }
 
